--- a/css/main.css
+++ b/css/main.css
@@ -84,8 +84,12 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom: 43px;
 }
 
+.main {
+    padding-top: 75px;
+    padding-bottom: 39px ;
+}
+
 .main h1 {
-    margin-top: 75px;
     margin-bottom: 15px;
     text-transform: uppercase;
     color:#272c2f;
@@ -96,7 +100,6 @@ h3 {
 
 .intro {
     width: 345px;
-    margin-bottom: 39px;
     color: #b2b5bf;
 }
 
